--- a/package.json
+++ b/package.json
@@ -1,22 +1,43 @@
 {
-  "name": "mafiagame",
-  "version": "1.0.0",
-  "main": "main.js",
-  "repository": "https://github.com/KarpuninAlexey/MafiaGame.git",
-  "author": "KarpuninAlexey <mr.offlain@mail.ru>",
-  "license": "MIT",
-  "devDependencies": {
-    "eslint": "^7.3.1",
-    "eslint-config-google": "^0.14.0",
-    "jest": "^26.0.1"
-  },
+  "name": "project_mafia_game",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "express": "^4.17.1"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "express": "^4.17.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.1"
   },
   "scripts": {
-    "lint": "eslint ./script",
-    "lint:fix": "eslint ./script --fix",
-    "test": "jest",
-    "start": "node ./script/main.js"
+    "start_react": "react-scripts start",
+    "build_react": "react-scripts build",
+    "test_react": "react-scripts test",
+    "eject_react": "react-scripts eject",
+    "start": "yarn build_react && node index.js",
+    "test": "jest"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "eslint": "^6.6.0",
+    "eslint-config-google": "^0.14.0",
+    "jest": "^24.9.0",
+    "supertest": "^4.0.2"
   }
 }
