--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: node_js
 node_js:
   - 12
-  
+
 dist: trusty
 
 before_install:
-  - curl -o- -L https://yarnpkg.com/install.sh | bash -s --
-  - export PATH="$HOME/.yarn/bin:$PATH"
+   - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version version-number
+   - export PATH="$HOME/.yarn/bin:$PATH"
 
 before_script:
   - yarn --frozen-lockfile
