--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 dist: trusty
 
 before_install:
-   - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version version-number
+   - curl -o- -L https://yarnpkg.com/install.sh | bash -s --
    - export PATH="$HOME/.yarn/bin:$PATH"
 
 before_script:
