--- a/package.json
+++ b/package.json
@@ -2,29 +2,22 @@
   "name": "project_mafia_game",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
-  },
+
   "scripts": {
-    "start_react": "react-scripts start",
-    "build_react": "react-scripts build",
-    "eject_react": "react-scripts eject",
-    "start": "yarn build_react && node index.js",
-    "test_react": "react-scripts test --watchAll=false",
-    "test_backend": "yarn jest backend/test/",
-    "start_nodemon": "yarn build_react && nodemon index.js",
-    "test": "yarn jest backend/test/ &&  yarn test_react"
+    "start": "yarn workspace frontend build && node index.js",
+    "start_nodemon": "yarn workspace frontend build && nodemon index.js",
+
+    "test_backend": "yarn workspace backend jest ./test ",
+    "test_frontend": "yarn workspace frontend test --watchAll=false",
+    "test": "yarn test_backend && yarn test_frontend"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
+  "workspaces": [
+    "backend",
+    "frontend"
+  ],
   "browserslist": {
     "production": [
       ">0.2%",
@@ -40,8 +33,6 @@
   "devDependencies": {
     "eslint": "^6.6.0",
     "eslint-config-google": "^0.14.0",
-    "jest": "^24.9.0",
-    "nodemon": "^2.0.4",
-    "supertest": "^4.0.2"
+    "jest": "^24.9.0"
   }
 }
