--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "supertest": "^4.0.2",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "supertest": "^4.0.2"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1"
   }
 }
