--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# See https://help.github.comtouch .gitignore/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
+/backend/node_modules
+/frontend/node_modules
 /.pnp
 .pnp.js
 
@@ -9,7 +11,7 @@
 /coverage
 
 # production
-/build
+/fontend/build/
 
 # misc
 .DS_Store
